--- a/styles.css
+++ b/styles.css
@@ -48,14 +48,17 @@
 footer{
     background-color: rgb(35, 35, 35);
     color: white;
-    text-size-adjust: ;
-    vertical-align: middle;
 }
 
 .footer-container{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+.footer-nav{
+    display: flex;
+    justify-content: center;
 }
 
 .social-media-icons{
@@ -65,12 +68,16 @@ footer{
 
 .social-media-icons a svg{
     text-decoration: none;
-    padding: 10px;
-    margin: 10px;
     border-radius: 50%;
-
+    margin: 5px;
 }
-.social-media-icons a:hover{
+.social-media-icons a:hover a:active a:visited{
     color: white;
     transition: 0,5;
 }
+
+.footer-bottom{
+    display: flex;
+    justify-content: center;
+}
+
