--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ footer{
     display: flex;
     justify-content: center;
     padding-top: 100px;
+    padding-bottom: 100px;
 }
 
 .text{
@@ -100,4 +101,14 @@ footer{
     float: center;
     left: 50px;
     top: 50px;
+    padding: 10px;
+}
+
+.about{
+    display: flex;
+    justify-content: center;
+}
+
+.aboutText{
+    padding: 50px;
 }
