--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,12 @@
     text-decoration: underline;
 }
 
+.social-media-icons{
+    display: flex;
+    justify-content: center;
+    margin: 10px;
+}
+
 footer{
     background-color: rgb(35, 35, 35);
     color: white;
@@ -130,4 +136,20 @@ footer{
     font-size: 22px;
     font-weight: 100;
     padding-bottom: 20px;
+  }
+
+.homeImage{
+    display: flex;
+    justify-content: center;
+}
+
+  .openSentence p{
+        display: flex;
+        align-content: center;
+  }
+
+  .scndSentence{
+    display: flex;
+    align-content: center;
+    justify-content: center;
   }
