--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,10 @@ footer{
     justify-content: center;
 }
 
+.footer-bottom span{
+    color: white;
+}
+
 .social-media-icons{
     display: flex;
     justify-content: center;
@@ -84,4 +88,10 @@ footer{
 .row{
     margin: 20%;
     padding-top: 20%;
+}
+
+.skills{
+    display: flex;
+    justify-content: center;
+    padding-top: 70px;
 }
