--- a/styles.css
+++ b/styles.css
@@ -81,3 +81,13 @@ footer{
     justify-content: center;
 }
 
+.col{
+    padding: 20px;
+}
+
+.head{
+    color: black;
+    display: flex;
+    justify-content: center;
+    padding-top: 60px;
+}
