--- a/styles.css
+++ b/styles.css
@@ -108,10 +108,10 @@ footer{
     color: white;
 }
 
-.row{
+/* .row{
     margin: 20%;
     padding-top: 20%;
-}
+} */
   
 .edu p{
     color: black;
@@ -273,8 +273,8 @@ p{
 }
 
 .container{
-    padding-top: 200px;
-    padding-bottom: 110px;
+    /* padding-top: 200px; */
+    /* padding-bottom: 110px; */
 }
 
 .prjs{
@@ -283,4 +283,11 @@ p{
     justify-content: center;
     padding-top: 90px;
     font-weight: 500;
+}
+
+.about{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
