--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,10 @@
     background-image: url(https://tyra-parring.github.io/host-/image/top-view-monstera-other-leaves-with-copy-space.jpg);
     background-size: cover;
 }
+body{
+    min-height: 100vh;
+
+}
 
 .image-five{
     background-image: url(https://tyra-parring.github.io/host-/image/top-view-beautiful-plant-leaves-with-copy-space.jpg);
@@ -92,7 +96,12 @@ footer{
 .footer-bottom span{
     color: white;
 }
-
+footer{
+    /* margin-top: 10000px; */
+ position: fixed;
+ bottom: 0;
+ min-width: 100%;;
+}
 .testim{
     font-weight: 200;
     display: flex;
