--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ footer{
 .footer-bottom span{
     color: white;
 }
-footer{
+#footerS{
     /* margin-top: 10000px; */
  position: fixed;
  bottom: 0;
