--- a/styles.css
+++ b/styles.css
@@ -281,10 +281,11 @@ p{
     padding-top: 60px;
 }
 
-.container{
+/* .container{
     /* padding-top: 200px; */
-    /* padding-bottom: 110px; */
-}
+    /* padding-bottom: 110px; 
+}*/
+
 
 .prjs{
     color: rgb(0, 0, 0);
