--- a/styles.css
+++ b/styles.css
@@ -217,20 +217,21 @@ p{
         align-content: center;
         justify-content: center;
         font-size: 50px;
-        padding-top: 30px;
+        padding-top: 20px;
   }
 
   .scndSentence{
     display: flex;
     align-content: center;
     justify-content: center;
-    font-size: 27px;
-    padding-bottom: 30px;
+    padding-bottom: 100px;
   }
 
   .fade-in-text{
     font-family: italiana;
     animation: fadeIn 4s;
+    font-weight: 400;
+    font-size: x-large;
   }
 
   @keyframes animate{
