--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,7 @@ p{
 .homeImage{
     display: flex;
     justify-content: center;
-    padding-top: 150px;
+    padding-top: 250px;
 }
 
 
@@ -217,21 +217,24 @@ p{
         align-content: center;
         justify-content: center;
         font-size: 50px;
-        padding-top: 20px;
   }
 
   .scndSentence{
     display: flex;
     align-content: center;
     justify-content: center;
-    padding-bottom: 100px;
+    padding-bottom: 90px;
   }
 
   .fade-in-text{
     font-family: italiana;
     animation: fadeIn 4s;
     font-weight: 400;
-    font-size: x-large;
+    font-size: 35px;
+  }
+
+  .fade-in-text span{
+    color: white;
   }
 
   @keyframes animate{
@@ -241,10 +244,6 @@ p{
       100% {
         width: 100%;
       }
-  }
-
-.scndSentence span{
-    color: rgb(255, 255, 255);
   }
 
 .btn{
